--- a/Regressão Linear/linear_regression3.ipynb
+++ b/Regressão Linear/linear_regression3.ipynb
@@ -22,6 +22,15 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "Função hipótese com 2 parâmetros, $𝑎_0 e 𝑎_1$,\n",
+    "\n",
+    "$\\hat{𝑦}(𝑖)=ℎ(𝒙(𝑖)) = 𝑎_0 + 𝑎_1𝑥_1(𝑖)$."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
